--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -2,10 +2,11 @@ AWSTemplateFormatVersion: "2010-09-09"
 Transform: "AWS::Serverless-2016-10-31"
 Description: CD Demo Lambda
 Resources:
-  Newlf2:
+  lf2codepipeline:
     Type: 'AWS::Serverless::Function'
     Properties:
       Handler: lambda_function.lambda_handler
+      FunctionName: lf1_n
       Runtime: python3.7
       CodeUri: ./New_lf2
       Description: ''
@@ -23,9 +24,10 @@ Resources:
           Properties:
             Path: /search
             Method: GET
-  mys3function:
+  lf1codepipeline:
     Type: 'AWS::Serverless::Function'
     Properties:
+      FunctionName: lf2_n
       Handler: lambda_function.lambda_handler
       Runtime: python3.7
       CodeUri: ./my-s3-function
